ake some changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="web-development-section">
             <div class="container">
                 <h1>Why Web Development??</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>Web development allows for creativity, problem-solving, and continuous learning,<br> enabling the creation of impactful, interactive online experiences</p>
                 <section class="world-coding-one">
                     <div>
                         <h2 class="coding-one-title">I will Do Coding and <br> Change The World</h2>
