My current target done '

--- a/index.html
+++ b/index.html
@@ -75,7 +75,31 @@
                 <iframe width="1076" height="550" src="https://www.youtube.com/embed/CJxB3Xu2oaE?si=GrLU2bfYLAmX45X0" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>  
         </section>
-        
+        <section class="my-current-target">
+            <h1>My Current Target</h1>
+            <p>My current target is to enhance my web development skills, build robust and <br>user-friendly applications, and contribute to impactful projects</p>
+            <div class="target-container">
+                <!-- .skill*4>img+h4.skill-title+p.skill-description -->
+                <div class="html-container">
+                    <img class="html-img" src="assets/html.png" alt="">
+                    <h4 class="html-title">HTML</h4>
+                    <p class="html-description">My current target is mastering HTML to create effective, semantic web pages.</p>
+                    <button><a href="">Learn More</a></button>
+                </div>
+                <div class="css-container">
+                    <img class="css-img" src="assets/css.png" alt="">
+                    <h4 class="css-title">CSS</h4>
+                    <p class="css-description">My current target is mastering CSS to design responsive, visually appealing layouts</p>
+                    <button><a href="">Learn More</a></button>
+                </div>
+                <div class="java-container">
+                    <img class="java-img" src="assets/js.png" alt="">
+                    <h4 class="java-title">Javascript</h4>
+                    <p class="java-description">My current target is mastering Java to build robust, efficient applications.</p>
+                    <button><a href="">Learn More</a></button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
